Implements simulator list-devices API
